# whisper-services-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
test/: requirements.txt  test.py
