[package]
name = "whisper-services-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
http = "1.2"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
whisper-trtllm-rs = { git = "https://github.com/yingeli/whisper-trtllm-rs.git" }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.10"
futures= "0.3"